[package]
name = "robots-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "^0.1.89"
moka = { version = "^0.12.13", features = ["future"] }
prost = "^0.14.3"
tonic = "^0.14.5"
tonic-prost = "^0.14.5"
tokio = { version = "^1.49.0", features = ["macros", "rt-multi-thread"] }
thiserror = "^2.0.18"

[build-dependencies]
tonic-prost-build = "^0.14.5"

[[bin]]
name = "robots-server"
path = "src/main.rs"

[[bin]]
name = "robots-client"
path = "src/client.rs"
