[package]
name = "robots-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "^0.1.89"
futures-util = "^0.3.32"
moka = { version = "^0.12.13", features = ["future"] }
prost = "^0.14.3"
robotstxt-rs = { git = "https://github.com/ChosunOne/robots-txt.git" }
reqwest = {version = "^0.13.2", features = ["stream"] }
tonic = "^0.14.5"
tonic-prost = "^0.14.5"
tokio = { version = "^1.49.0", features = ["macros", "rt-multi-thread"] }
thiserror = "^2.0.18"
tracing = "^0.1.44"
tracing-subscriber = {version = "^0.3.22", features = ["fmt", "env-filter"] }
url = "^2.5.8"

[dev-dependencies]
wiremock = "^0.6.5"
tokio-test = "^0.4.5"

[build-dependencies]
tonic-prost-build = "^0.14.5"

[[bin]]
name = "robots-server"
path = "src/main.rs"

[[bin]]
name = "robots-client"
path = "src/client.rs"
